{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 4,
  "lineage": "2b674f98-3aab-0b25-e727-b8003f1e8275",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rdp_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:029037611564:security-group-rule/sgr-01553160433bc260e",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "RDP from allowed CIDR - Security Autopilot",
            "from_port": 3389,
            "id": "sgr-01553160433bc260e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0e5bea6687c7063c1",
            "security_group_rule_id": "sgr-01553160433bc260e",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "029037611564",
            "id": "sgr-01553160433bc260e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_restricted",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:029037611564:security-group-rule/sgr-0ce3d127e217097ee",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "SSH from allowed CIDR - Security Autopilot",
            "from_port": 22,
            "id": "sgr-0ce3d127e217097ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0e5bea6687c7063c1",
            "security_group_rule_id": "sgr-0ce3d127e217097ee",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "029037611564",
            "id": "sgr-0ce3d127e217097ee",
            "region": "eu-north-1"
          },
          "dependencies": [
            "null_resource.revoke_public_admin_ingress"
          ]
        }
      ]
    }
  ]
}